--- a/app/Docker-compose.yml
+++ b/app/Docker-compose.yml
@@ -8,6 +8,7 @@ services:
       sh -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
+      - dev-static-data:/vol/web
     ports:
       - "8000:8000"
     environment:
@@ -32,3 +33,4 @@ services:
 
 volumes:
   dev-db-data:
+  dev-static-data:
